# plusplus-os

./: .clang-format  BUILD.md  CMakeLists.txt  GUIDELINES.md  README.md
apps/: CMakeLists.txt
apps/sortex/: CMakeLists.txt  linker.ld
apps/sortex/include/: font.h
apps/sortex/src/: main.c  rendering.c
apps/terminal/: CMakeLists.txt
apps/terminal/src/: main.c
bootloader/: CMakeLists.txt
bootloader/include/: elf-loader.h  rsdp-finder.h
bootloader/src/: elf-loader.c  main.c  rsdp-finder.c
efilib/include/x86_64/: efibind.h
kernel/: CMakeLists.txt  linker.ld
kernel/include/: acpi.h  ahci.h  apic.h  cpuid.h  debug_log.h  elf_loader.h  exceptions.h  fat.h  font.h  gdt.h  idt.h  kassert.h  memory.h  paging.h  pci.h  pic.h  port_io.h  process_system.h  ps2.h  rendering.h  syscalls.h  uefi.h  usb.h  util.h
kernel/include/ahci/: fis.h  hba.h
kernel/include/memory/: defs.h  entry_pool.h  frame_allocator.h  paging.h  slab_allocator.h
kernel/src/: acpi.c  ahci.c  apic.c  cpuid.c  debug_log.c  elf_loader.c  exceptions.c  ext2.c  fat.c  frame_allocator.c  gdt.c  idt.c  main.c  memory.c  paging.c  pci.c  pic.c  port_io.c  process_system.c  ps2.c  rendering.c  simple_fs.c  stage1_entry.c  syscalls.c  usb.c  util.c
kernel/src/memory/: entry_pool.c  frame_allocator.c  paging.c  slab_allocator.c
libc/include/: stddef.h  stdlib.h  string.h
libc/src/stdlib/: abs.c  atof.c  atoi.c  atol.c  atoll.c  bsearch.c  div.c  labs.c  ldiv.c  strtod.c
libc/src/string/: memchr.c  memcmp.c  memcpy.c  memmove.c  memset.c  strcat.c  strcmp.c  strcpy.c  strlen.c
